<resources>
    <string name="app_name">PFD</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard">PFD</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="LongTextPizzaHutInfo">The simplest way to add Facebook Login to your app is to add LoginButton from the SDK. The LoginButton is a UI element that wraps functionality available in the LoginManager. When someone clicks on the button, the login is initiated with the permissions set in the LoginManager. The button follows the login state, and displays the correct text based on someone\'s authentication state</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="facebook_app_id">908519785993093</string>
    <string name="fb_login_protocol_scheme">fb908519785993093</string>

    <string name="newPass"><font size="15">ENTER NEW PASSWORD</font></string>
    <string name="graph">Graph</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="large_text">
         We aim to create a community that shares our love for food and is honest, responsible in their feedback.   There is a vacuum for our province and its rich food . To ensure that the PFD serves its purpose there are certain rules that we expect our members to follow:
• The app is about your food experiences (be it at home, restaurant, or somewhere else)
• Be honest in your review of a restaurant.
• If you are the owner of a restaurant or a catering business, you can post / promote it ONCE a week. When you post please state that you belong to the management or own the restaurant. Any excessive posts within a week marketing your restaurant will result in deletion.
• HEALTHY CRITICISM is welcome but criticizing a restaurant just for the sake of it is not acceptable and unfair to them.
• And most importantly, please be COURTEOUS and RESPECTFUL towards estaurants. No personal attacks will be tolerated.
We hope that this app will become a healthy platform that will help foodies in connecting with each Resturants and benefiting from our experiences.
    </string>
    <string name="logout">logout</string>
    <string name="RestnameBestDeal">BURGER KING</string>
    <string name="ValueMealBestDeal">VALUE MEAL</string>
    <string name="descriptionBestDeal">2 BURGERS FRIES, 2 DRINKS</string>
    <string name="itemPriceBestDeal">ONLY ON 799/-</string>
    <string name="itemNameCategory">WOW DEAL</string>
    <string name="item_description_Category">2 Large Pizza with 1.5l Pespsi</string>
    <string name="itemPriceCategory">1599/-</string>
    <string name="restId">1</string>
    <string name="restName">PIZZA HUT</string>
    <string name="facebook_group">FACEBOOK GROUP</string>
    <string name="PeshawarFoodDiaries">Peshawar Food Diaries</string>
    <string name="version">VERSION</string>
    <string name="versionId">1.0.1</string>
    <string name="dev_by">DEVELOPED BY</string>
    <string name="companyName">Techease Solutions</string>
    <string name="webUrl">www.techeasesol.com</string>
    <string name="RecipeTitle">Title</string>
    <string name="recipeTag">Recipe Category</string>
    <string name="time">Time</string>
    <string name="RecipeIngredients">Ingredients</string>
    <string name="RecipeInstructions">Instructions</string>
    <string name="btnSubmitRecipe">Submit recipe</string>
    <string name="disscount">Disscount</string>
    <string name="disscountValue">30</string>
    <string name="percentage">%</string>
    <string name="get">Get</string>
    <string name="Pesh">Peshawar 2017</string>
    <string name="expiryCoupan">Valid Upto 22 Nov, 2017</string>
    <string name="FgPass">FORGET PASSWORD</string>
    <string name="enterEmail">ENTER YOUR EMAIL ADDRESS</string>
    <string name="btnSend">Send</string>
    <string name="signIn">SIGN IN</string>
    <string name="login">LOGIN TO YOUR ACCOUNT</string>
    <string name="btnSignIn">SIGN IN</string>
    <string name="NoAccountYet">NO ACCOUNT YET</string>
    <string name="tvSignUp">SIGN UP</string>
    <string name="forgetPass">FORGET PASSWORD?</string>
    <string name="forgetTitle">FORGET PASSWORD</string>
    <string name="restPassTitle">RESET YOUR PASSWORD</string>
    <string name="reset">RESET</string>
    <string name="location">PESHAWAR</string>
    <string name="timings">Timings</string>
    <string name="timingValue">10.00 AM-12.00 AM GMT+5</string>
    <string name="locByStree">621 West 46th Street,NewYork,NY10036</string>
    <string name="about">About</string>
    <string name="text">Your Facebook Profile</string>
    <string name="Fbname">Adam</string>
    <string name="PersonalInfo">Personal Information</string>
    <string name="emial">Email</string>
    <string name="emailValue">example@gmail.com</string>
    <string name="gender">Gender</string>
    <string name="genderValue">Gender</string>
    <string name="LiveIn">Live In</string>
    <string name="signUpText">SIGN UP FOR NEW ACCOUNT</string>
    <string name="alreadyAccount">ALREADY HAVE AN ACCOUNT</string>
    <string name="enterCode">ENTER VERIFICATION CODE</string>
    <string name="verify">VERIFY</string>
    <string name="fast_food">Fast Food</string>
    <string name="vegetable">Vegetable</string>
    <string name="strange">Signup screen design – (Your choice)
Signup – Name, mobile no,, Referral number.  I don’t want to keep login screen. Once someone signup next time no need to login again he can access direct (it Means 2nd time when user open app it will go directly to home page)

Menu – (there will be a side bar Manu) Example see below.
1.	Home. 2 Earn extra. 3. Earning reports 4. How to work 5. about us 7. Exit
    2.	Eran Extra: here you will add a Admob Rewarded video ad. When user click on Earn Extra video ad will start when ad finish 2 points will added to account. ( point editable)
3.	Earning reports : when click home it will go to new page.  Here will show the earnings report separately (1. Total earning points. 2 referral earning points.3 Extra Earning points. 4. Total redeems. 5. Total referal
4.	How to work: here will be a website link. That’s it. (link editable)
5.	About us: here will be a website link. (link editable)
6.
7.	Exit: if user clicks on Exit. App will close.


Point System:  If someone finish all the task 10 points. will added to wallet. (pointEditable)

Redeem system : need to set a fixed points (Example minimum 1000 points need to redeem . If below 1000 it will show massage Like my app showing which I given to you).( point Editable)
</string>
</resources>
