<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#fff"
    tools:context="com.techease.pfd.Fragments.Setting">

    <TextView
        android:id="@+id/tvSetting"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/colorPrimary"
        android:text="@string/text"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#fff"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.facebook.login.widget.ProfilePictureView
            android:id="@+id/friendProfilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15sp"
            android:layout_centerInParent="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFbUserName"
            android:textSize="20sp"
            android:textColor="#129FDD"
            android:text="@string/Fbname"
            android:layout_gravity="bottom"
            android:layout_margin="15sp"/>
    </LinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="3sp"
    android:background="#eee"/>
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/PersonalInfo"
     android:textSize="20sp"
     android:layout_margin="10sp"
     android:textColor="#129FDD"
     android:id="@+id/tvPersonalInfo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emial"
        android:textSize="16sp"
        android:textColor="#129FDD"
        android:layout_margin="10sp"
        android:id="@+id/tvBirthdayTitle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="20sp"
            android:text="@string/emailValue"
            android:id="@+id/tvUserBirthday"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="#129FDD"
            android:layout_margin="10sp"
            android:textSize="16sp"
            android:id="@+id/tvUserGenderTitle"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/genderValue"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:id="@+id/tvUserGender"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/LiveIn"
            android:textSize="16sp"
            android:textColor="#129FDD"
            android:layout_margin="10sp"
            android:id="@+id/tvUserLocTitle"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="15sp"
            android:id="@+id/tvUserLoc"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar_Setting"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="50sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        android:max="100"
        android:progress="0" />
</LinearLayout>
