<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eee"
    tools:context="com.techease.pfd.Fragments.AboutUsFrag">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.thefinestartist.finestwebview.views.CustomSwipeToRefresh
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/Webview1"
            >
        </com.thefinestartist.finestwebview.views.CustomSwipeToRefresh>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        card_view:cardCornerRadius="8dp"
        card_view:cardBackgroundColor="#fff"
        android:layout_marginTop="10sp"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true"
        android:id="@+id/cardViewCustomPesh_FD">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:src="@drawable/appicon"
                    android:padding="10sp"/>
        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:padding="10sp"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary" />
            </LinearLayout>
    <TextView
        android:id="@+id/tvLongText"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:padding="5sp"
        android:textSize="16sp"
        android:text="@string/large_text"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        card_view:cardCornerRadius="8dp"
        card_view:cardBackgroundColor="#fff"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true"
        android:id="@+id/card2">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/face"
                    android:padding="10sp"/>
        <TextView
            android:id="@+id/tvFbGroupABoutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook_group"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:padding="5sp"/>
            </LinearLayout>
        <TextView
            android:id="@+id/tvFbLInkABoutUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PeshawarFoodDiaries"
            android:padding="5sp"
            android:textSize="16sp"
            />
        </LinearLayout>
    </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            card_view:cardCornerRadius="8dp"
            card_view:cardBackgroundColor="#fff"
            card_view:cardPreventCornerOverlap="true"
            card_view:cardUseCompatPadding="true"
            android:id="@+id/card4">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="50sp"
                        android:layout_height="50sp"
                        android:src="@drawable/earth"
                        android:padding="10sp"/>
            <TextView
                android:id="@+id/tvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:padding="5sp"
                android:textStyle="bold"/>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/versionId"
                    android:textSize="16sp"
                    android:padding="5sp"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        card_view:cardCornerRadius="8dp"
        card_view:cardBackgroundColor="#fff"
        card_view:cardPreventCornerOverlap="true"
        card_view:cardUseCompatPadding="true"
        android:id="@+id/card3">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:src="@drawable/developer"
                    android:padding="10sp"/>
        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_by"
            android:padding="5sp"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tvCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5sp"
                android:text="@string/companyName"
                android:textSize="16sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="25sp"
                    android:layout_height="25sp"
                    android:src="@drawable/world"
                    android:paddingLeft="5sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/webUrl"
                    android:textSize="15sp"
                    android:paddingLeft="7sp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
    </FrameLayout>
    </ScrollView>

</LinearLayout>
