<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back2"
    tools:context="com.techease.pfd.Fragments.ResetPassFrag">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="300sp"
                android:clickable="true"
                android:layout_marginTop="20sp"
                card_view:cardCornerRadius="15dp"
                card_view:cardBackgroundColor="#fff"
                card_view:cardPreventCornerOverlap="true"
                card_view:cardUseCompatPadding="true"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_gravity="center"
                android:id="@+id/cvForget">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgetTitle"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="15sp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restPassTitle"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="40sp"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/etNewPassRestPass"
                    android:layout_width="260sp"
                    android:layout_height="50sp"
                    android:hint="ENTER NEW PASSWORD"
                    android:textColor="#fff"
                    android:padding="10sp"
                    android:textSize="15sp"
                    android:textColorHint="#fff"
                    android:background="@drawable/btnripple"
                    android:layout_gravity="center"
                    android:layout_marginBottom="30sp"
                    android:inputType="textPassword"
                    />
                <EditText
                    android:id="@+id/etReEnterPassRestPass"
                    android:layout_width="260sp"
                    android:layout_height="50sp"
                    android:hint="RE-ENTER PASSWORD"
                    android:textColor="#fff"
                    android:padding="10sp"
                    android:textSize="15sp"
                    android:textColorHint="#fff"
                    android:background="@drawable/btnripple"
                    android:layout_gravity="center"
                    android:layout_marginTop="40sp"
                    android:inputType="textPassword"
                    />
                <Button
                    android:id="@+id/btnReset"
                    android:layout_width="170sp"
                    android:layout_height="40sp"
                    android:background="@drawable/button"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="20sp"
                    android:text="@string/reset"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    />


            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
