<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back2"
    tools:context="com.techease.pfd.Fragments.SignUpFrag">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">
            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="400sp"
                android:clickable="true"
                android:layout_marginTop="20sp"
                card_view:cardCornerRadius="15dp"
                card_view:cardBackgroundColor="#fff"
                card_view:cardPreventCornerOverlap="true"
                card_view:cardUseCompatPadding="true"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_gravity="center"
                android:id="@+id/cvSignUp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tvSignUp"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="15sp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/signUpText"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="40sp"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/etUsernameSignUp"
                    android:layout_width="260sp"
                    android:layout_height="50sp"
                    android:hint="USER NAME"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:padding="10sp"
                    android:textColorHint="#fff"
                    android:background="@drawable/btnripple"
                    android:layout_gravity="center"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="75sp"
                    />
                <EditText
                    android:id="@+id/etEmailSignUp"
                    android:layout_width="260sp"
                    android:layout_height="50sp"
                    android:hint="EMAIL"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:padding="10sp"
                    android:textColorHint="#fff"
                    android:background="@drawable/btnripple"
                    android:layout_gravity="center"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="15sp"
                    />
                <EditText
                    android:id="@+id/etPasswordSignUp"
                    android:layout_width="260sp"
                    android:layout_height="50sp"
                    android:textSize="15sp"
                    android:hint="PASSWORD"
                    android:textColorHint="#fff"
                    android:textColor="#fff"
                    android:padding="10sp"
                    android:background="@drawable/btnripple"
                    android:layout_gravity="center|bottom"
                    android:inputType="textPassword"
                    android:layout_marginBottom="122sp"
                    />
                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="170sp"
                    android:layout_height="40sp"
                    android:background="@drawable/button"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="50sp"
                    android:text="@string/tvSignUp"
                    android:textStyle="bold"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom"
                    android:layout_marginBottom="20sp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alreadyAccount"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:id="@+id/tvSignInSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/signIn"
                        android:layout_marginLeft="5sp"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/colorPrimary"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
